footer try fix on small screens

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -65,10 +65,8 @@ a {
 .mainContainer {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
   width: 100%;
   overflow: auto;
-}
-.full-height {
-  height: 100vh;
 }
